[tool.poetry]
name = "creepo"
version = "1.0.0"
description = "a configurable caching repo"
authors = ["lane.holcombe <lane@joeandlane.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mime = "^0.1.0"
build = "^1.0.3"
cherrypy = "^18.9.0"
coverage = "^7.3.4"
flake8 = "^6.1.0"
lxml = "^4.9.4"
pylint = "^3.0.3"
pytest = "^7.4.3"
pyyaml = "^6.0.1"
requests = "^2.31.0"
routes = "^2.5.1"
pyopenssl = "^23.3.0"

[tool.poetry.group.dev.dependencies]
mime = "^0.1.0"
tox = "^2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "creepo"
authors = [{name = "lane.holcombe", email = "lane@joeandlane.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "cherrypy",
  "pytest",
  "pytest-cov",
  "coverage",
  "mime",
]

[project.urls]
Homepage = "https://github.com/dooleydiligent/creepo"
Issues = "https://github.com/dooleydiligent/creepo/issues"

[project.optional-dependencies]
test = ["tox", "pytest", "coverage"]
lint = [ "black", "flake8"]
#cov = ["pytest < 5.0.0", "pytest-cov[all]"]